--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ java {
 
 repositories {
 	mavenCentral()
+	maven { url "https://clojars.org/repo/" }
 }
 
 dependencies {
@@ -20,6 +21,9 @@ dependencies {
 //		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-web-tomcat'
 	}
 //	implementation 'org.springframework.boot:spring-boot-starter-jetty'
+	implementation ('org.springframework:spring-jdbc')
+	implementation("hikari-cp:hikari-cp:3.0.1")
+	runtimeOnly ('com.h2database:h2:2.2.224')
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
